@@ -1,3 +1,9 @@
+2001-02-28  Masatake YAMATO  <yamato@redhat.com>
+
+ 	Applied a patch from Martin.
+
+	* output-emf.c: Now supports centerline.
+
 2001-02-27  Masatake YAMATO  <yamato@redhat.com>
 
 	* NEWS: Write about dxf.
